--- a/Home.html
+++ b/Home.html
@@ -21,52 +21,54 @@
   <div class="ContentWrapper">
 
     <div class='card'>
-      Battery
+      Battery<br/>
       <img src='img/Delka.jpg' alt='Good Looking Battery'></img>
     </div>
 
     <div class='card'>
-      Beat it dead beat.
+      Car's and Batteries.
+
     </div>
 
     <div class='card'>
-      Beat it dead beat.
+      Car's and Batteries.
+      
     </div>
 
     <div class='card'>
-      Beat it dead beat.
+      Car's and Batteries.
     </div>
 
     <div class='card'>
-      Beat it dead beat.
+      Car's and Batteries.
     </div>
 
     <div class='card'>
-      Beat it dead beat.
+      Car's and Batteries.
     </div>
 
     <div class='card'>
-      Beat it dead beat.
+      Car's and Batteries.
     </div>
 
     <div class='card'>
-      Beat it dead beat.
+      Car's and Batteries.
     </div>
 
     <div class='card'>
-      Beat it dead beat.
+      Car's and Batteries.
     </div>
 
     <div class='card'>
-      Beat it dead beat.
+      Car's and Batteries.
     </div>
 
     <div class='card'>
-      Beat it dead beat.
+      Car's and Batteries.
     </div>
 
     <div class='card'>
-      Beat it dead beat.
+      Car's and Batteries.
     </div>
 
   </div>
