•Button Update's •Adding Motto

--- a/Home.html
+++ b/Home.html
@@ -14,25 +14,24 @@
 
 <body>
   <div id="SerHead">
-    <img src='img/Sit.jpg' alt='Sitting Before Service!'></img>
+    <div id="headLeft">SERVICE! You want it?</div>
+    <div id="headCenter"><img src='img/Sit.jpg' alt='Sitting Before Service!' height="35%" width="35%"></img></div>
+    <div id="headRight">We got it!</div>
   </div>
 
 <div class="SerBody">
   <div class="ContentWrapper">
-
     <div class='card'>
-      Battery<br/>
-      <img src='img/Delka.jpg' alt='Good Looking Battery'></img>
+      Battery
+    </div>
+
+    <div class="card" id="Battery">
+      Car's and Batteries.
     </div>
 
     <div class='card'>
       Car's and Batteries.
 
-    </div>
-
-    <div class='card'>
-      Car's and Batteries.
-      
     </div>
 
     <div class='card'>
