--- a/Home.html
+++ b/Home.html
@@ -14,9 +14,11 @@
 
 <body>
   <div id="SerHead">
-    <div id="headLeft">SERVICE! You want it?</div>
-    <div id="headCenter"><img src='img/Sit.jpg' alt='Sitting Before Service!' height="35%" width="35%"></img></div>
-    <div id="headRight">We got it!</div>
+    <div id="box">
+      <div id="headLeft"><p style='transform: rotate(-45deg)'>SERVICE! You want it?</p></div>
+      <div id="headCenter"><img src='img/Sit.jpg' alt='Sitting Before Service!'></img></div>
+      <div id="headRight"><p style='transform: rotate(45deg)'>We got it!</p></div>
+    </div>
   </div>
 
 <div class="SerBody">
