Updated Text Size, Attempted to fix the Card Buttons

--- a/Home.html
+++ b/Home.html
@@ -24,11 +24,15 @@
 <div class="SerBody">
   <div class="ContentWrapper">
     <div class='card'>
-      Battery
+      <div class="cardBlock">
+        <img src="img/Delka.jpg" alt="battery"><img>
+      </div>
+      <div class="cardRibbon">Battery</div>
     </div>
 
-    <div class="card" id="Battery">
-      Car's and Batteries.
+    <div class="card">
+      Card
+
     </div>
 
     <div class='card'>
