--- a/Home.html
+++ b/Home.html
@@ -23,57 +23,76 @@
 
 <div class="SerBody">
   <div class="ContentWrapper">
+<!--Links to Click-->
     <div class='card'>
       <div class="cardBlock">
-        <img src="img/Delka.jpg" alt="battery"><img>
+        <img src="img/Delka.jpg" alt="battery"></img>
       </div>
-      <div class="cardRibbon">Battery</div>
+      <div class="cardRibbon">Service 1</div>
     </div>
 
     <div class="card">
-      Card
+      <div class="cardBlock">
+        <img src="img/EngineChck.jpg" alt="Engine Inspection"></img>
+      </div>
+      <div class="cardRibbon">Service 2</div>
 
     </div>
 
     <div class='card'>
-      Car's and Batteries.
-
+      <div class="cardBlock">
+        <img src="img/Oil.jpg" alt="Lots of Motor Oil"></img>
+      </div>
+      <div class="cardRibbon">Service 3</div>
     </div>
 
     <div class='card'>
-      Car's and Batteries.
+      <div class="cardBlock">
+        <img src="img/Supplies.jpg" alt="Look at all this stuff!"></img>
+      </div>
+      <div class="cardRibbon">Service 4</div>
     </div>
 
     <div class='card'>
-      Car's and Batteries.
+      <div class="cardBlock">
+        <img src="img/Numbah1.jpg" alt="We're Number 1 baby!"></img>
+      </div>
+      <div class="cardRibbon">Service 5</div>
     </div>
 
     <div class='card'>
-      Car's and Batteries.
+      <div class="cardBlock">
+        <img src="img/SCAG2.jpg" alt="For when you need a NEW Lawn Mower."></img>
+      </div>
+      <div class="cardRibbon">Service 6</div>
     </div>
 
     <div class='card'>
-      Car's and Batteries.
+      <div class="cardBlock">
+        <img src="img/Delka.jpg" alt="battery"></img>
+      </div>
+      <div class="cardRibbon">Service 7</div>
     </div>
 
     <div class='card'>
-      Car's and Batteries.
+      <div class="cardBlock">
+        <img src="img/Delka.jpg" alt="battery"></img>
+      </div>
+      <div class="cardRibbon">Service 8</div>
     </div>
 
     <div class='card'>
-      Car's and Batteries.
+      <div class="cardBlock">
+        <img src="img/Delka.jpg" alt="battery"></img>
+      </div>
+      <div class="cardRibbon">Service 9</div>
     </div>
 
     <div class='card'>
-      Car's and Batteries.
-    </div>
-
-    <div class='card'>
-      Car's and Batteries.
-    </div>
-
-    <div class='card'>
-      Car's and Batteries.
+      <div class="cardBlock">
+        <img src="img/Delka.jpg" alt="battery"></img>
+      </div>
+      <div class="cardRibbon">Service 10</div>
     </div>
 
   </div>
